    - 'Reset feedback variables' option restored in feedback item (#297)
    - Safely print unicode debug output (convert to ascii)
    - Fix unicode bug in opensesamerun gui
    - Convert backspace key to key name (#286)
    - Fix a bug with variably defined properties of circle elements in sketchpad GUI (#300)
    - Fix circle properties in xpyriment back-end (#299)
  * Improvements
    - Use better fallback image in sketchpad
    - Deprecate transparent variable management (#294)
    - Add custom icon to debian packaging (#296)
    - Form_base plug-in shows script by default (#298)
    - Add custom icon to debian packaging
    - Deprecate transparent variable management option
    - More comprehensive translation possible
    - Hide xpyriment-gst back-end (not ready for production)
    - Custom cursor in sketchpad for increased visibility
  * Translation updates
    - German translation updated (de_DE)
  * Windows packaging
    - Include wx for PsychoPy monitor center (#295)

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Tue, 18 Nov 2014 14:02:42 +0100

opensesame (2.9.1-ubuntu1) trusty; urgency=medium

  * Bugs fixed
    - Fix resetting font size and family in sketchpad (#284)
    - Fix rounding issue in canvas._gabor() (#283)
    - Better detection of Exception messages (#285)
    - Fix a race condition when dropping an item on a loop or sequence
    - Fix broken context menu in sketchpad when running a translation (#287)
    - Correctly parse variables in video_player plug-in (#288)
    - Use new sketchpad-element icons also in 32x32 size
    - Fixed a bug when reducing and canceling the number of cycles in a loop
    - Fixed display of font style in sketchpad widget
    - Include PyQt4 plugins in Windows build
  * Improvements
    - Application-wide keyboard shortcuts for tab switching
    - Add close current tab action
    - Improved focus behavior
  * Translation updates
    - Update German translation (de_DE)
